subindo botão de subir até o topo

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </div>
     </header>
 
-    <main>
-        <div class="container-fluid background2">
+    <main class="full-width">
+        <div class="container background2">
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="display-3 fw-bolder text-white mt-5 text-center text-sm-start">Aproveite na TV.</h1>
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="container-fluid background2">
+        <div class="container background2">
             <div class="row">
                 <div class="col-md-6 order-2 order-md-1">
                     <img src="./images/devices.png" alt="Descrição da imagem" class="img-fluid">
@@ -68,7 +68,7 @@
             </div>
         </div>
 
-        <div class="container-fluid background2">
+        <div class="container background2">
             <div class="row">
                 <div class="col">
                     <h1 class="display-4 text-white fw-bolder text-center">Perguntas frequentes</h1>
@@ -192,48 +192,54 @@
         </div>
     </main>
     
-    <footer class="container-fluid background2">
-        <div class="row">
-            <div class="col mb-5 text-secondary">
-                <p>Dúvidas? Ligue 0800 591 8942</p>
+    <footer class="full-width">
+        <div class="container">
+            <div class="row text-center text-sm-start">
+                <div class="col py-5 text-secondary">
+                    <p>Dúvidas? Ligue 0800 591 8942</p>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3 text-secondary">
-                <p>Perguntas frequentes</p>
-                <p>Relações com investidores</p>
-                <p>Formas de assistir</p>
-                <p>Informações corporativas</p>
-                <p>Só na Growflix</p>
+            <div class="row text-center text-sm-start"">
+                <div class="col-md-3 text-secondary">
+                    <p>Perguntas frequentes</p>
+                    <p>Relações com investidores</p>
+                    <p>Formas de assistir</p>
+                    <p>Informações corporativas</p>
+                    <p>Só na Growflix</p>
+                </div>
+                <div class="col-md-3 text-secondary">
+                    <p>Central de Ajuda</p>
+                    <p>Carreiras</p>
+                    <p>Termos de Uso</p>
+                    <p>Entre em contato</p>
+                </div>
+                <div class="col-md-3 text-secondary">
+                    <p>Conta</p>
+                    <p>Resgatar cartão pré-pago</p>
+                    <p>Privacidade</p>
+                    <p>Teste de velocidade</p>
+                </div>
+                <div class="col-md-3 text-secondary">
+                    <p>Media Center</p>
+                    <p>Comprar cartão pré-pago</p>
+                    <p>Preferências de cookies</p>
+                    <p>Avisos legais</p>
+                </div>
             </div>
-            <div class="col-md-3 text-secondary">
-                <p>Central de Ajuda</p>
-                <p>Carreiras</p>
-                <p>Termos de Uso</p>
-                <p>Entre em contato</p>
-            </div>
-            <div class="col-md-3 text-secondary">
-                <p>Conta</p>
-                <p>Resgatar cartão pré-pago</p>
-                <p>Privacidade</p>
-                <p>Teste de velocidade</p>
-            </div>
-            <div class="col-md-3 text-secondary">
-                <p>Media Center</p>
-                <p>Comprar cartão pré-pago</p>
-                <p>Preferências de cookies</p>
-                <p>Avisos legais</p>
-            </div>
-        </div>
-        <div class="row mt-5">
-            <div class="col text-secondary">
-                <p>Growflix Growdev</p>
+            <div class="row text-center text-sm-start" py-5">
+                <div class="col text-secondary">
+                    <p>Growflix Growdev</p>
+                </div>
             </div>
         </div>
     </footer>
 
+    <button onclick="topFunction()" id="topBtn" title="Voltar ao topo">↑</button>
+
     <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Meu script -->
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
