--- a/episodios.html
+++ b/episodios.html
@@ -922,6 +922,9 @@
             </div>
         </div>
     </footer>
+
+    <button onclick="topFunction()" id="topBtn" title="Voltar ao topo">↑</button>
+
     <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
